--- a/themes/jms_molla/modules/gdz_megamenu/views/css/style.css
+++ b/themes/jms_molla/modules/gdz_megamenu/views/css/style.css
@@ -40,7 +40,7 @@
     background: #fff;
     border-radius: 0;
     display: block;
-    left: 11px;
+    left: 0;
     margin-top: 0;
     min-width: 218px;
     opacity: 0;
