--- a/themes/jms_molla/assets/css/demo-2.css
+++ b/themes/jms_molla/assets/css/demo-2.css
@@ -597,6 +597,13 @@ a:focus {
 .footer-dark.footer-2 .widget-about-title {
   color: #c96; }
 
+#footer.footer-3 .widget-call i {
+  color: #c96; }
+
+#footer.footer-3 .widget-call a:hover,
+#footer.footer-3 .widget-call a:focus {
+  color: #c96; }
+
 /* Headers */
 .header-top a:hover, .header-top a:focus {
   color: #c96; }
@@ -1158,7 +1165,7 @@ a:focus {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  min-height: 48px; }
+  min-height: 4.8rem; }
 
 .fraction-slider .next::before,
 .fraction-slider .prev::before {
@@ -1178,7 +1185,7 @@ a:focus {
 .h2-banner-type-1 .pb-banner-text {
   text-align: left;
   color: #fff;
-  left: 40px;
+  left: 4rem;
   top: 50%;
   bottom: auto;
   -webkit-transform: translateY(-50%);
@@ -1192,7 +1199,7 @@ a:focus {
     font-weight: 300;
     font-size: 1.6rem;
     letter-spacing: -.01em;
-    margin-bottom: 5px;
+    margin-bottom: .5rem;
     line-height: 1.2; }
   .h2-banner-type-1 .pb-banner-text .pb-banner-title {
     color: #fff;
@@ -1207,14 +1214,14 @@ a:focus {
     font-size: 2.4rem;
     line-height: 1.25;
     letter-spacing: -.01em;
-    margin-bottom: 13px; }
+    margin-bottom: 1.3rem; }
   .h2-banner-type-1 .pb-banner-text .pb-banner-button {
     text-transform: uppercase;
     background: transparent;
-    border: 1px solid #fff;
+    border: .1rem solid #fff;
     color: #fff;
     min-width: auto;
-    padding: 5px 13px; }
+    padding: .5rem 1.3rem; }
     .h2-banner-type-1 .pb-banner-text .pb-banner-button:hover {
       color: #fff;
       border-color: #c96;
@@ -1233,7 +1240,7 @@ a:focus {
   margin-bottom: 1rem; }
 
 .h2-categorytab .tab-content {
-  padding-top: 20px; }
+  padding-top: 2rem; }
 
 .product-flags .on-sale {
   display: none; }
