--- a/themes/jms_molla/assets/scss/base/headers/_header-3.scss
+++ b/themes/jms_molla/assets/scss/base/headers/_header-3.scss
@@ -1,123 +1,160 @@
 /* Header 3 */
-.header-3 {
-	color: #fff;
-	background-color: #333333;
-	.header-top {
-		background-color: #333;
-		.container::after,
-		.container-fluid::after {
-		    height: .1rem;
-			background-color: #444444;
+.header-3{
+	background-color: #333;
+	.header-top{
+		font-weight: 300;
+		font-size: 1.3rem;
+		.container{
+			&::before{
+				content: "";
+				display: block;
+				height: 1px;
+				position: absolute;
+				bottom: -2px;
+				left: 10px;
+				right: 10px;
+				background-color: #444;
+			}
 		}
-		.header-left i {
-			font-size: 1.6rem;
-			margin-right: .5rem;
+		.text-h1{
+			display: none;
 		}
-	}
-	.header-dropdown {
-		padding-top: .65rem;
-		padding-bottom: .65rem;
-	}
-	.header-middle {
-		border-bottom: none;
-	}
-	.header-bottom {
-		background-color: #fff;
-		.menu>li>a::before {
-		    bottom: 0;
-		    top: unset;
-	}
-	}
-	.wishlist a {
-		color: #fff;
-	}
-	.cart-dropdown:not(:hover):not(.show) .dropdown-toggle, .compare-dropdown:not(:hover):not(.show) .dropdown-toggle,
-	.mobile-menu-toggler,
-	.search-toggle:not(:hover):not(:focus),
-	.wishlist-link:not(:hover):not(:focus) {
-	    color: #fff;
-	}
-
-	.wishlist .wishlist-count,
-	.cart-count {
-			color: #333;
-	}
-	.header-bottom {
-		border-bottom: .1rem solid #ebebeb;
-		.header-right p {
-			padding-right: 0;
+		.col-left{
+			i{
+				font-size: 1.6rem;
+				margin-right: .5rem;
+			}
 		}
-	}
-	.logo {
-		margin-bottom: 3.5rem;
-		margin-top: 3rem;
-	}
-
-	.header-search-extended {
-		.btn {
-			max-width: 40px;
-			margin-left: 1rem;
-			height: 46px;
-			font-size: 2.2rem;
-			background-color: transparent;
-			color: #333;
-		}
-		.form-control {
-			border-top-right-radius: 3rem;
-			border-bottom-right-radius: 3rem;
-			padding-left: 0;
-			height: 44px;
-			padding: 1rem 2.4rem 1rem .5rem;
-		}
-	}
-	.btn-primary:hover, 
-	.btn-primary:focus, 
-	.btn-primary.focus, 
-	.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, 
-	.show > .btn-primary.dropdown-toggle {
-	    color: $primary-color;
-	    background-color: transparent;
-	}
-}
-@include mq('lg', 'max') {
-	.header-3 {
-		.header-search-visible {
-
-			.header-search-wrapper {
-				border-color: #dadada;
-				&:before {
-					border-bottom-color: #dadada;
-				}
+		.col-right{
+			.row > div{
+				margin-left: 2.8rem;
+			}
+			.header-menu{
+				left: auto;
+				right: 0;
+			}
+			.header-dropdown{
+				padding-top: 7.5px;
+				padding-bottom: 5.5px;
 			}
 		}
 	}
-}
-
-@include mq('sm', 'max') {
-	.header-3 .cart-dropdown, 
-	.header-3 .compare-dropdown,
-	.header-3 .wishlist {
-		padding-left: 1.4rem;
+	.header-middle {
+		.row{
+			margin: 0;
+			.layout-column{
+				padding: 0;
+			}
+		}
+		img.logo{
+			padding-bottom: 3px;
+		}
+		.search-form i{
+			font-size: 2.2rem;
+			color: #333;
+			&:hover{
+				color: $primary-color;
+			}
+		}
+		#search-form{
+			max-width: 570px;
+			width: 100%;
+			margin-left: 0;
+			.search-box{
+				background: #fff;
+				border-radius: 30px;
+				border-color: #ebebeb;
+			}
+			.input-group{
+				flex-direction: row-reverse;
+			}
+			.gdz-search-input{
+				height: 44px;
+				padding: 1.2rem 2.4rem 1.1rem 0;
+			}
+			.button-search{
+				height: 44px;
+				padding-right: 1.3rem;
+			}
+		}
+		.wishlist a{
+			color: #fff;
+		}
+		#cart_block > a{
+			color: #fff;
+		}
+		.header-right .row{
+			padding-top: 1px;
+			> div{
+				padding-right: 0;
+				padding-top: 22px;
+				padding-bottom: 21.5px;
+			}
+		}
+		.menu > li > a {
+			letter-spacing: .01em;
+		}
+		.menu.sf-arrows > li > .sf-with-ul {
+		    padding-right: 1.5rem;
+		}
 	}
-}
-
-
-@media screen and (max-width: 1119px) {
-	.header-intro-clearance .header-bottom .container::before,
-	.header-intro-clearance .header-bottom .container::after {
-		visibility: hidden;
+	.header-bottom{
+		background-color: #fff;
+		border-bottom: .1rem solid #ebebeb;
+		.vermenu-btn i{
+			font-size: 1rem;
+			position: absolute;
+			right: 1.5rem;
+		}
+		.vermenu{
+			.menu-dropdown{
+				border: .1rem solid #ebebeb;
+			}
+		}
 	}
-}
-
-@media screen and (max-width: 1100px) {
-	.header-intro-clearance .header-bottom .header-right i {
-		visibility: hidden;
+	.sticky-wrapper{
+		.container{
+			position: relative;
+		}
+		.text{
+			p{
+				padding-top: .1rem;
+				font-size: 1.4rem;
+				font-weight: 500;
+				letter-spacing: -.01em;
+			}
+			i{
+				color: #333;
+				font-size: 1.6rem;
+				letter-spacing: -.01em;
+				margin-right: 1.5rem;
+			}
+			.highlight{
+				color: #333;
+			}
+		}
 	}
-}
-
-
-@media screen and (max-width: 399px) {
-	.header-intro-clearance .account, .wishlist {
-		display: none;
+	#hor-menu .gdz-megamenu .nav.level0 > li{
+		&.open > a::before{
+			bottom: 0;
+			top: auto;
+		}
+		> a::before{
+			bottom: 0;
+			top: auto;
+		}
+	}
+	.header-intro-clearance{
+		.user-info{
+			> a{
+				padding-right: 0;
+				&::after{
+					display: none;
+				}
+			}
+		}
+		#cart_block > a .ajax_cart_quantity{
+			color: #333;
+		}
 	}
 }
