--- a/themes/jms_molla/assets/scss/base/headers/_header.scss
+++ b/themes/jms_molla/assets/scss/base/headers/_header.scss
@@ -8,6 +8,9 @@ footer .row, header .row{
 		font-weight: 300;
 		font-size: 1.4rem;
 		background-color: #f8f8f8;
+		.text-h3{
+			display: none;
+		}
 		.col-right{
 			.row > div{
 				margin-left: 4rem;
@@ -21,8 +24,43 @@ footer .row, header .row{
 			}
 		}
 	}
+	.sticky-wrapper{
+		.container{
+			position: relative;
+		}
+		.text{
+			p{
+				padding-top: .1rem;
+				padding-right: .5rem;
+				font-size: 1.4rem;
+				font-weight: 500;
+				letter-spacing: -.01em;
+			}
+			i{
+				color: #333;
+				font-size: 1.6rem;
+				letter-spacing: -.01em;
+				margin-right: 1.5rem;
+			}
+			.highlight{
+				color: #333;
+			}
+		}
+	}
 	.header-middle {
-		border-bottom: .1rem solid #f4f4f4;
+		border-bottom: none;
+		.container{
+	    	position: relative;
+	    	&::after {
+			    position: absolute;
+			    content: '';
+			    bottom: -.1rem;
+			    left: 1rem;
+			    right: 1rem;
+			    height: .1rem;
+			    background-color: #ebebeb;
+			}
+		}
 		.row{
 			margin: 0;
 			.layout-column{
@@ -1172,7 +1210,6 @@ footer .row, header .row{
 	}
 }
 .cart_block_list li{
-	padding: 16px 0;
 	border-bottom: 1px solid #ebebeb;
 }
 .remove-from-cart{
@@ -1438,24 +1475,30 @@ footer .row, header .row{
 		display: none !important;
 	}
 }
-#hor-menu .gdz-megamenu .nav.level0 > li > a{
-    &:hover::before{
-        transform-origin: left center;
-        transform: scale(1, 1);
-    }
-    &::before{
-        content: '';
-        display: block;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: .1rem;
-        background-color: #c96;
-        transform-origin: right center;
-        transform: scale(0, 1);
-        transition: transform .3s ease;
-    }
+#hor-menu .gdz-megamenu .nav.level0 > li{
+	&.open > a::before{
+		transform-origin: left center;
+	    transform: scale(1, 1);
+	}
+	> a{
+	    &:hover::before{
+	        transform-origin: left center;
+	        transform: scale(1, 1);
+	    }
+	    &::before{
+	        content: '';
+	        display: block;
+	        position: absolute;
+	        left: 0;
+	        top: 0;
+	        width: 100%;
+	        height: .1rem;
+	        background-color: #c96;
+	        transform-origin: right center;
+	        transform: scale(0, 1);
+	        transition: transform .3s ease;
+	    }
+	}
 }
 .gdz-megamenu{
 	position: static;
@@ -1463,46 +1506,6 @@ footer .row, header .row{
 .header-middle{
 	.container, .container-fluid{
 		position: relative;
-	}
-}
-.header-1{
-	.header-middle {
-	    border-bottom: none;
-	    .container{
-	    	position: relative;
-	    	&::after {
-			    position: absolute;
-			    content: '';
-			    bottom: -.1rem;
-			    left: 1rem;
-			    right: 1rem;
-			    height: .1rem;
-			    background-color: #ebebeb;
-			}
-		}
-	}
-	.sticky-wrapper{
-		.container{
-			position: relative;
-		}
-		.text{
-			p{
-				padding-top: .1rem;
-				padding-right: .5rem;
-				font-size: 1.4rem;
-				font-weight: 500;
-				letter-spacing: -.01em;
-			}
-			i{
-				color: #333;
-				font-size: 1.6rem;
-				letter-spacing: -.01em;
-				margin-right: 1.5rem;
-			}
-			.highlight{
-				color: #333;
-			}
-		}
 	}
 }
 
@@ -1578,4 +1581,3 @@ footer .row, header .row{
 		color: $primary-color;
 	}
 }
-
