--- a/themes/jms_molla/assets/scss/demos/demo-1.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-1.scss
@@ -16,7 +16,7 @@ $secondary-color: #92b25a;
 		margin: 0;
 	}
 	.pb-countdown{
-		margin-bottom: 40px;
+		margin-bottom: 4rem;
 		.countdown-section{
 			position: relative;
 			display: inline-flex;
@@ -25,7 +25,7 @@ $secondary-color: #92b25a;
 			align-items: center;
 			background-color: $primary-color;
 			color: #fff;
-			border-radius: 3px;
+			border-radius: .3rem;
 			min-width: 70px;
 			line-height: 1;
 			padding-top: 2.1rem;
@@ -53,18 +53,18 @@ $secondary-color: #92b25a;
 			    text-overflow: ellipsis;
 			}
 			&:not(:last-child){
-				margin-right: 20px;
+				margin-right: 2rem;
 				&::after{
 					color: #333333;
 					content: ':';
 					display: inline-block;
 					font-weight: 400;
-					font-size: 20px;
+					font-size: 2rem;
 					line-height: 1;
 					position: absolute;
 					left: 100%;
-					margin-left: 9px;
-					margin-top: -1px;
+					margin-left: .9rem;
+					margin-top: -.1rem;
 					top: 50%;
 					transform: translateY(-50%);
 				}
@@ -113,7 +113,7 @@ $secondary-color: #92b25a;
 	}
 	.col-banner{
 		.pb-banner-text{
-			top: 37px;
+			top: 3.7rem;
 			bottom: auto;
 			left: 50%;
 			transform: translateX(-50%);
@@ -123,7 +123,7 @@ $secondary-color: #92b25a;
 			.btn{
 				min-width: auto;
 				background: transparent;
-				border: 1px solid #959595;
+				border: .1rem solid #959595;
 				color: #333;
 				white-space: nowrap;
 				line-height: 1;
@@ -175,34 +175,34 @@ $secondary-color: #92b25a;
 		}
 	}
 	.banner-1 .pb-banner-text{
-		left: 70px;
+		left: 7rem;
 	}
 	.banner-2{
 		&.pb-banner > a::after{
 			background-color: rgba(51,51,51,0.25);
 		}
 		.pb-banner-text{
-			left: 40px;
-			bottom: 40px;
+			left: 4rem;
+			bottom: 4rem;
 			top: auto;
 		}
 	}
 	.banner-3{
-		margin-bottom: 20px;
+		margin-bottom: 2rem;
 		&.pb-banner > a::after{
 			background-color: rgba(51,51,51,0.25);
 		}
 		.pb-banner-text{
 			.pb-banner-button{
-				margin-top: 14px;
+				margin-top: 1.4rem;
 			}
 		}
 	}
 	.pb-banner-text{
 		display: block;
-		top: 41px;
+		top: 4.1rem;
 		bottom: auto;
-		left: 40px;
+		left: 4rem;
 		right: auto;
 		text-align: left;
 		.pb-banner-subtitle{
@@ -211,7 +211,7 @@ $secondary-color: #92b25a;
 			font-weight: 300;
 			font-size: 1.4rem;
 			letter-spacing: -.01em;
-			margin-bottom: 5px;
+			margin-bottom: .5rem;
 			line-height: 1.2;
 		}
 		.pb-banner-title{
@@ -228,14 +228,14 @@ $secondary-color: #92b25a;
 			font-size: 2.4rem;
 			line-height: 1.25;
 			letter-spacing: -.01em;
-			margin-bottom: 13px;
+			margin-bottom: 1.3rem;
 		}
 		.pb-banner-button{
 			background: transparent;
-			border: 1px solid #959595;
+			border: .1rem solid #959595;
 			color: #333;
 			min-width: auto;
-			padding: 5px 15px;
+			padding: .5rem 1.5rem;
 			&:hover{
 				color: #fff;
 				border-color: $primary-color;
@@ -250,7 +250,7 @@ $secondary-color: #92b25a;
 	}
 	.brand-item a{
 		display: flex;
-		height: 100px;
+		height: 10rem;
 		border: .1rem solid #ebebeb;
 		border-left-width: 0;
 		img{
@@ -275,9 +275,9 @@ $secondary-color: #92b25a;
 		    color: #fff;
 		    background-color: transparent;
 		    border-color: #fff;
-			border: 1px solid;
+			border: .1rem solid;
 			min-width: 170px;
-			padding: 14.5px 20px;
+			padding: 1.45rem 2rem;
 			line-height: 1;
 		    &:hover,
 		    &:focus {
@@ -285,7 +285,7 @@ $secondary-color: #92b25a;
 		    	border-color: $primary-color;
 		    }
 		    i{
-		    	margin-left: 5px;
+		    	margin-left: .5rem;
 		    }
 		}
 	}
@@ -299,7 +299,7 @@ $secondary-color: #92b25a;
 	}
 	.nav.nav-tabs{
 		.nav-item{
-			margin: 0 10px;
+			margin: 0 1rem;
 		}
 		.nav-link{
 			position: relative;
