--- a/themes/jms_molla/assets/scss/demos/demo-2.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-2.scss
@@ -42,7 +42,7 @@ $secondary-color: #c96;
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		min-height: 48px;
+		min-height: 4.8rem;
 	}
 }
 .fraction-slider{
@@ -66,7 +66,7 @@ $secondary-color: #c96;
 	.pb-banner-text{
 		text-align: left;
 		color: #fff;
-		left: 40px;
+		left: 4rem;
 		top: 50%;
 		bottom: auto;
 		transform: translateY(-50%);
@@ -78,7 +78,7 @@ $secondary-color: #c96;
 			font-weight: 300;
 			font-size: 1.6rem;
 			letter-spacing: -.01em;
-			margin-bottom: 5px;
+			margin-bottom: .5rem;
 			line-height: 1.2;
 		}
 		.pb-banner-title{
@@ -95,15 +95,15 @@ $secondary-color: #c96;
 			font-size: 2.4rem;
 			line-height: 1.25;
 			letter-spacing: -.01em;
-			margin-bottom: 13px;
+			margin-bottom: 1.3rem;
 		}
 		.pb-banner-button{
 			text-transform: uppercase;
 			background: transparent;
-			border: 1px solid #fff;
+			border: .1rem solid #fff;
 			color: #fff;
 			min-width: auto;
-			padding: 5px 13px;
+			padding: .5rem 1.3rem;
 			&:hover{
 				color: #fff;
 				border-color: $primary-color;
@@ -128,7 +128,7 @@ $secondary-color: #c96;
 		margin-bottom: 1rem;
 	}
 	.tab-content{
-		padding-top: 20px;
+		padding-top: 2rem;
 	}
 }
 .product-flags{
